--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS-Homework 10</title>
+    <title>Snackbar</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul class="nav-list">
-      <li><a href="./1-timer.html" class="nav-link">TIMER</a></li>
-      <li><a href="./2-snackbar.html" class="nav-link">SNACKBAR</a></li>
-    </ul>
+    <script src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
