--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,6 +9,7 @@
     />
     <title>Timer</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/timer.css" />
   </head>
   <body>
     <section class="second-section">
